fix: letter spacing and size

--- a/src/components/jobs-list.module.scss
+++ b/src/components/jobs-list.module.scss
@@ -14,9 +14,9 @@
 }
 
 .heading {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   line-height: 1.2rem;
-  margin: 0rem 0px;
+  margin-bottom: 0.3rem;
   text-align: center;
 
   color: var(--dark);
