--- a/src/components/projects-list.module.scss
+++ b/src/components/projects-list.module.scss
@@ -20,7 +20,7 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  gap: 0.2rem;
+  gap: 0.4rem;
 }
 
 .heading {
@@ -36,7 +36,7 @@
 }
 
 .role {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-family: monospace;
 }
 
